// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionRow renders the collapsed AccordionRow markup 1`] = `
"<table>
  <tbody>
    <AccordionRow id=\\"trip-45030860\\" colSpan={3} contentComponent={[Function: contentComponent]} expanded={false} toggle={[Function: toggle]}>
      <tr className=\\"schedule-table__row\\" aria-controls=\\"trip-45030860\\" aria-expanded={false} role=\\"button\\" onClick={[Function: toggle]} onKeyPress={[Function: onKeyPress]} tabIndex={0}>
        Row Content
        <td className=\\"schedule-table__cell schedule-table__cell--tiny\\">
          <span className=\\"fa c-expandable-block__header-caret\\" dangerouslySetInnerHTML={{...}} />
        </td>
      </tr>
    </AccordionRow>
  </tbody>
</table>"
`;

exports[`AccordionRow renders the expanded AccordionRow markup 1`] = `
"<table>
  <tbody>
    <AccordionRow id=\\"trip-45030860\\" colSpan={3} contentComponent={[Function: contentComponent]} expanded={true} toggle={[Function: toggle]}>
      <tr className=\\"schedule-table__row--expanded\\" aria-controls=\\"trip-45030860\\" aria-expanded={true} role=\\"button\\" onClick={[Function: toggle]} onKeyPress={[Function: onKeyPress]} tabIndex={0}>
        Row Content
        <td className=\\"schedule-table__cell schedule-table__cell--tiny\\">
          <span className=\\"fa c-expandable-block__header-caret--white\\" dangerouslySetInnerHTML={{...}} />
        </td>
      </tr>
      <tr id=\\"trip-45030860-expanded\\">
        <td colSpan={3} className=\\"schedule-table__cell schedule-table__cell--expanded\\">
          Children
        </td>
      </tr>
    </AccordionRow>
  </tbody>
</table>"
`;
